--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon">
@@ -23,7 +22,6 @@
 
 <body>
 
- <!-- Add your content of header -->
 <header class="">
   <div class="navbar navbar-default visible-xs">
     <button type="button" class="navbar-toggle collapsed">
@@ -32,7 +30,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="./index.html" class="navbar-brand col-md-6">shubhank gaba photography</a>
+    <a href="./index.html" class="navbar-brand col-md-6">Shubhank Gaba Photography</a>
   </div>
 
   <nav class="sidebar">
@@ -67,6 +65,9 @@
           <a class="fa-icon" href="https://www.linkedin.com/in/shubhank-gaba-0a2281187/" title="" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
+          <a class="fa-icon" href="https://github.com/Shubhank92" title="" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
         </p>
         <hr class="h03" align="left">
         <p class="para03">© SG Photography | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a></p>
@@ -79,7 +80,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-6">
-    <img class="img-responsive" alt="" src="aboutme.jpeg">
+    <img class="img-responsive" alt="" src="dp.jpg">
   </div>
   <div class="col-xs-12 col-md-6 font-about"><link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <h1>About Me</h1>
