--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon">
@@ -23,7 +22,6 @@
 
 <body>
 
- <!-- Add your content of header -->
 <header class="">
   <div class="navbar navbar-default visible-xs">
     <button type="button" class="navbar-toggle collapsed">
@@ -66,6 +64,9 @@
           </a>
           <a class="fa-icon" href="https://www.linkedin.com/in/shubhank-gaba-0a2281187/" title="" target="_blank">
             <i class="fa fa-linkedin"></i>
+          </a>
+          <a class="fa-icon" href="https://github.com/Shubhank92" title="" target="_blank">
+            <i class="fa fa-github"></i>
           </a>
         </p>
         <hr class="h03" align="left">
@@ -128,8 +129,7 @@
               </a>
               <a class="fa-icon" href="https://www.linkedin.com/in/shubhank-gaba-0a2281187/" title="" target="_blank">
                   <i class="fa fa-linkedin"></i>
-              </a>
-              </a>
+              </a>  
             </div>
           </div>
         </form>
