--- a/project.html
+++ b/project.html
@@ -9,13 +9,10 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
-
-
 
   <title>Project</title>  
 
@@ -23,7 +20,6 @@
 
 <body>
 
- <!-- Add your content of header -->
 <header class="">
   <div class="navbar navbar-default visible-xs">
     <button type="button" class="navbar-toggle collapsed">
@@ -66,6 +62,9 @@
           <a class="fa-icon" href="https://www.linkedin.com/in/shubhank-gaba-0a2281187/" title="" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
+          <a class="fa-icon" href="https://github.com/Shubhank92" title="" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
         </p>
         <hr class="h03" align="left">
         <p class="para03">© SG Photography | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a></p>
@@ -81,7 +80,9 @@
   <div class="col-xs-12 col-md-8">
 
     <div class="section-container-spacer">
-        <h1>Project</h1>
+        <h1><link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+          Project
+        </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -89,13 +90,13 @@
     </div>
 
     <div class="section-container-spacer">
-      <p><img class="img-responsive" alt="" src="project04.jpg" width="800" height="500"></p>
+      <p><img class="img-responsive" alt="" src="pic06.jpg" width="800" height="500"></p>
       <div class="row">
           <div class="col-xs-12 col-md-6">
-              <p><img class="img-responsive" alt="" src="project06.jpg"></p>
+              <p><img class="img-responsive" alt="" src="pic04.jpg"></p>
           </div>
           <div class="col-xs-12 col-md-6">
-              <p><img class="img-responsive" alt="" src="project07.jpg"></p>
+              <p><img class="img-responsive" alt="" src="pic12.jpg"></p>
           </div>
       </div>
     </div>
