--- a/services.html
+++ b/services.html
@@ -67,6 +67,9 @@
           <a class="fa-icon" href="https://www.linkedin.com/in/shubhank-gaba-0a2281187/" title="" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
+          <a class="fa-icon" href="https://github.com/Shubhank92" title="" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
         </p>
         <hr class="h03" align="left">
         <p class="para03">© SG Photography | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a></p>
@@ -92,17 +95,17 @@
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="portrait01.jpg" width="320" height="250">
+    <img class="img-responsive" alt="" src="pic05.jpg" width="320" height="250">
     <h2>Portrait Photography</h2>
     <p>One of the oldest types of photography is portrait photography. It can range from shooting your family members to friends to pet.</p>
     <a href="./contact.html" class="btn btn-primary" title=""> Get in touch!</a>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="street01.jpg">
-    <h2>Street Photography</h2>
-    <p>Street photography is generally use to reflect the everyday life trends prevalent in the society and is used for showing a mirror to the people.</p>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
+    <img class="img-responsive" alt="" src="pic06.jpg">
+    <h2>Candid Photography</h2>
+    <p>Candid photography is the act of capturing subjects without their knowledge. This is helpful in event or street photos, where you want to capture reality.</p>
+    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch!</a>
   </div>
 
 </div>
