--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-6">
-    <img class="img-responsive" alt="" src="dp.jpg">
+    <img class="img-responsive" alt="" src="./assets/images/dp.jpg">
   </div>
   <div class="col-xs-12 col-md-6 font-about"><link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <h1>About Me</h1>
