--- a/project.html
+++ b/project.html
@@ -90,13 +90,13 @@
     </div>
 
     <div class="section-container-spacer">
-      <p><img class="img-responsive" alt="" src="pic06.jpg" width="800" height="500"></p>
+      <p><img class="img-responsive" alt="" src="./assets/images/pic06.jpg" width="800" height="500" onContextMenu="return false"></p>
       <div class="row">
           <div class="col-xs-12 col-md-6">
-              <p><img class="img-responsive" alt="" src="pic04.jpg"></p>
+              <p><img class="img-responsive" alt="" src="./assets/images/pic04.jpg" onContextMenu="return false"></p>
           </div>
           <div class="col-xs-12 col-md-6">
-              <p><img class="img-responsive" alt="" src="pic12.jpg"></p>
+              <p><img class="img-responsive" alt="" src="./assets/images/pic12.jpg" onContextMenu="return false"></p>
           </div>
       </div>
     </div>
