--- a/services.html
+++ b/services.html
@@ -88,21 +88,21 @@
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="./assets/images/img-12.jpg">
+    <img class="img-responsive" alt="" src="./assets/images/img-12.jpg" >
     <h2>Food Photography</h2>
     <p>Food photography is the art of clicking images of various food items in manner that makes it immediately appealing to the viewers.</p>
     <a href="./contact.html" class="btn btn-primary" title=""> Get in touch!</a>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="pic05.jpg" width="320" height="250">
+    <img class="img-responsive" alt="" src="./assets/images/pic05.jpg" width="320" height="250" onContextMenu="return false">
     <h2>Portrait Photography</h2>
     <p>One of the oldest types of photography is portrait photography. It can range from shooting your family members to friends to pet.</p>
     <a href="./contact.html" class="btn btn-primary" title=""> Get in touch!</a>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="pic06.jpg">
+    <img class="img-responsive" alt="" src="./assets/images/pic06.jpg" onContextMenu="return false">
     <h2>Candid Photography</h2>
     <p>Candid photography is the act of capturing subjects without their knowledge. This is helpful in event or street photos, where you want to capture reality.</p>
     <a href="./contact.html" class="btn btn-primary" title=""> Get in touch!</a>
